# subscription-payments

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  Dockerfile.chain  README.md  chain.dockerfile  docker-compose.yaml  hardhat.config.ts  package.json  tsconfig.json
.github/scripts/: kustomize-apply.sh
.github/workflows/: ci.yml  graph-subscriptions-api.arbitrum-goerli.yml  graph-subscriptions-api.template.yml  graph-subscriptions-api.testnet.yml
.k8s/arbitrum/: env.secret.yml  kustomization.yml  service.yml
.k8s/arbitrum-goerli/: env.secret.yml  ingress.yml
.k8s/base/: kustomization.yml  podmonitor.yml  redpanda.secret.yml  service.yml  test.secret.yml
.k8s/mainnet/: env.secret.yml  ingress.yml
.k8s/testnet/: env.secret.yml  kustomization.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
contract/: README.md  addresses.json  hardhat.config.ts  package.json  tsconfig.json
contract/contracts/: Subscriptions.sol
contract/contracts/test/: StableMock.sol
contract/scripts/: deploy.ts  test
contract/tasks/: deploy.ts
contract/test/: contract.test.ts  helpers.ts  model.test.ts  subs.test.ts  subscriptions.ts
contract/utils/: deploy.ts  helpers.ts
contracts/: README.md  Subscriptions.sol  addresses.json  extract-abis.bash  hardhat.config.ts  package.json
contracts/contracts/: Registry.sol  Subscriptions.sol
contracts/tasks/: deploy.ts  registry.ts
contracts/test/: contract.test.ts  helpers.ts  registry.test.ts  usdc.ts
contracts/utils/: artifacts.ts  deploy.ts  helpers.ts
graph-subscriptions-api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config  docker-compose.yaml  justfile
graph-subscriptions-api/.k8s/base/: kustomization.yml  pod-monitor.yml  service.yml
graph-subscriptions-api/.k8s/production/: env.yml  ingress.yml  kustomization.yml  service.yml
graph-subscriptions-api/.k8s/testnet/: env.yml  ingress.yml  kustomization.yml  update-env.sh
graph-subscriptions-api/datasource/: Cargo.toml  README.md
graph-subscriptions-api/datasource/src/: consumer.rs  datasource.rs  datasource_inmemory.rs  datasource_redis.rs  datsource_postgres.rs  lib.rs  models.rs  utils.rs
graph-subscriptions-api/entity/: .env.example  Cargo.toml  README.md  justfile
graph-subscriptions-api/entity/src/: lib.rs  prelude.rs  sea_orm_active_enums.rs  subscription_query_result.rs
graph-subscriptions-api/migration/: Cargo.toml  README.md  justfile
graph-subscriptions-api/migration/src/: lib.rs  m20230416_185838_create_table_subscription_query_result.rs
graph-subscriptions-api/producer-cli/: Cargo.toml
graph-subscriptions-api/producer-cli/src/: main.rs
graph-subscriptions-api/src/: auth.rs  config.rs  main.rs  network_subgraph.rs  schema.rs  subgraph_client.rs  subscriptions_subgraph.rs
graph-subscriptions-rs/: Cargo.toml  README.md
graph-subscriptions-rs/src/: lib.rs  subscription_tier.rs
model/: Cargo.toml  subscriptions.tla
model/src/: main.rs
model/tla/: justfile  prelude.tla
scripts/: deploy.ts
subgraph/: networks.json  package.json  schema.graphql  subgraph.template.yaml  subgraph.yaml
subgraph/abis/: Subscriptions.json
subgraph/src/: constants.ts  entity-loader.ts  subscriptions.ts  utils.ts
subgraph/tests/: block-utils.ts  subscriptions-utils.ts  subscriptions.test.ts  test-utils.ts  tsconfig.json
test/: rng.ts  subscriptions.ts
