[package]
name = "graph-subscriptions-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
clap = { version = "4.1", features = ["derive"] }
graph-subscriptions = { path = "../graph-subscriptions-rs" }
ethers = { version = "1.0", default-features = false}
hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0" }
tokio = { version = "1.24", features = ["macros", "rt"] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "v0.1.1", default-features = false, features = ["url"] }
base64 = { version = "0.21.0", features = ["alloc"] }
