[package]
name = "graph-subscriptions-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.1.0", features = ["derive"] }
ethers = { version = "2.0.0", default-features = false, features = ["rustls"] }
graph-subscriptions = { path = "../graph-subscriptions-rs" }
hex = "0.4.3"
serde = { version = "1.0.0" }
tokio = { version = "1.24", features = ["macros", "rt"] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "v0.1.3", default-features = false, features = [
    "url",
] }
