[package]
name = "graph-subscriptions-api"
version = "0.1.0"
edition = "2021"
description = "GraphQL API to expose graph subscription tickets and stats"

[workspace]
members = [".", "datasource"]

[dependencies]
anyhow = "1.0.70"
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = { version = "0.6.11", features = ["headers"] }
chrono = "0.4.24"
dotenv = "0.15.0"
eventuals = "0.6.7"
graph-subscriptions = { path = "../graph-subscriptions-rs" }
reqwest = { version = "0.11.15", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
    "trust-dns",
] }
serde = "1.0.158"
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "v0.1.3" }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = {  version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
