[package]
name = "graph-subscriptions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
ciborium = "0.2.0"
ethers = { version = "1.0", default-features = false, features = ['abigen'] }
eip-712-derive = { git = "https://github.com/graphprotocol/eip-712-derive" }
serde = { version = "1.0" }
