[package]
name = "datasource"
version = "0.1.0"
edition = "2021"
description = "Subpackage used to buildout and export the subscription stats datasource. Provides a generic, extendable, approach to retrieving the subscription stats logs from the kafka topic for consumption by the API"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
entity = { path = "../entity" }
eventuals = "0.6.7"
futures = "0.3.27"
migration = { path = "../migration" }
prost = "0.11.8"
prost-types = "0.11.8"
rdkafka = { version = "0.29.0", features = ["tracing", "gssapi-vendored", "ssl-vendored"] }
sea-orm = { version = "0.11.2", features = [
  "sqlx-postgres",
  "macros",
  "runtime-tokio-native-tls",
  "with-chrono",
  "with-uuid"
] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "v0.1.3" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.11.4"
