[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
description = "defines the rdbms datasource entities for the subscriptions api"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.11.2" }
serde = { version = "1", features = ["derive"] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "v0.1.3" }