[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = { version = "1.3.1", default_features = false, features = ["std", "v4", "fast-rng"] }
dotenv = "0.15.0"

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
