[package]
name = "producer-cli"
version = "0.1.0"
edition = "2021"
description = "spins up a simple kafka producer to test the kafka -> consumer -> write to datasource flow"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.0", features = ["derive"] }
datasource = {path = "../datasource"}
prost = "0.11.9"
prost-types = "0.11.9"
rdkafka = { version = "0.29.0", features = ["tracing", "gssapi-vendored", "ssl-vendored"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }